@@ -23,6 +23,7 @@ public class MocapPacketS2C implements CustomPacketPayload
 	public static final int NOCOL_PLAYER_ADD = 1;
 	public static final int NOCOL_PLAYER_REMOVE = 2;
 	public static final int CUSTOM_SKIN_DATA = 5;
+	public static final int CLEAR_CACHE = 6;
 
 	private final int version;
 	private final int op;
@@ -94,6 +95,7 @@ public class MocapPacketS2C implements CustomPacketPayload
 			case NOCOL_PLAYER_ADD: PlayerConnectionEvent.addNocolPlayer((UUID)object); break;
 			case NOCOL_PLAYER_REMOVE: PlayerConnectionEvent.removeNocolPlayer((UUID)object); break;
 			case CUSTOM_SKIN_DATA: CustomClientSkinManager.register((Pair<String, byte[]>)object); break;
+			case CLEAR_CACHE: CustomClientSkinManager.clearCache();
 		}
 	}
 
@@ -115,6 +117,11 @@ public class MocapPacketS2C implements CustomPacketPayload
 	public static void sendCustomSkinData(ServerPlayer player, String name, byte[] byteArray)
 	{
 		send(player, CUSTOM_SKIN_DATA, Pair.of(name, byteArray));
+	}
+
+	public static void sendClearCache(ServerPlayer player)
+	{
+		send(player, CLEAR_CACHE, null);
 	}
 
 	private static void send(ServerPlayer player, int op, Object object)
