@@ -231,6 +231,8 @@
   "mocap.misc.sync.disable.changed": "Synchronization disabled",
   "mocap.misc.sync.disable.not_changed": "Synchronization has already been disabled",
 
+  "mocap.misc.clear_cache.cleared": "Cache cleared",
+
 
   "mocap.help": "%s - §lHelp§r\n  /mocap recording [...] - Recording player movements\n  /mocap recordings [...] - Managing recording files\n  /mocap scenes [...] - Creating and modifying scenes\n  /mocap playback [...] - Playback of scenes and recordings\n  /mocap settings [...] - Shows and modifies settings\n  /mocap info - Displays information about mod\n  /mocap help - Displays this message\n§lHow to use:§r\n- First, you need to start recording using \"/mocap recording start\". It will record all your movements or movements of a player given as an argument. \n- Then, you can stop recording using \"/mocap recording stop\" and save it with \"/mocap recording save <name>\".\n- Use \"/mocap playback start <name>\" to play recording.\n- You can also create scenes to which you can add multiple recordings or other scenes, with parameters like player name, position offset, or start delay.\n- To create scene use \"/mocap scenes add <scene_name>\". Then, add your recording using \"/mocap scenes add_to <scene_name> <recording_name> [player_name] [skin_source_type] [skin_source]\" (you can skip arguments in square brackets if you want).\n- To play scene use \"/mocap playback start .<scene_name>\" - you need to put a dot before the scene name.\n- By putting a dot before name, when using \"/mocap scenes add_to ...\", you can also add scenes to other scenes.",
 
